# TaskLane

./: CHANGELOG.md  README.md  pyproject.toml  setup.cfg
examples/: crawl_handler.py  demo.py  distributed_pi.py  echo_handler.py
src/tasklane/: __init__.py  cli.py  config.py  core.py  dashboard.py  master.py  worker.py
