[metadata]
name = tasklane
version = 0.1.0

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    redis>=4.0

[options.packages.find]
where = src

[options.extras_require]
dashboard = flask>=2.0

[options.entry_points]
console_scripts =
    tasklane = tasklane.cli:main
